fixed overlapping selects

--- a/app/assets/stylesheets/jquery_material_form.less
+++ b/app/assets/stylesheets/jquery_material_form.less
@@ -251,7 +251,7 @@
     position: relative;
     margin-bottom: 10px;
     padding-top: 18px;
-    z-index: 3
+    //z-index: 3
 }
 .material .material-select input{display: none}
 .material .material-select > label{
